--- a/frontend/public/styles/_modals.css
+++ b/frontend/public/styles/_modals.css
@@ -1,7 +1,4 @@
 /* --- Import des CSS spécifiques aux dialogues modaux --- */
 @import './pages/booking_modal.css';
 @import './pages/org_modal.css';
-
-
-
-
+@import './pages/photo_modal.css';
