--- a/frontend/public/styles/_modals.css
+++ b/frontend/public/styles/_modals.css
@@ -2,3 +2,4 @@
 @import './pages/booking_modal.css';
 @import './pages/org_modal.css';
 @import './pages/photo_modal.css';
+@import './pages/reservable_modal.css';
