--- a/frontend/public/styles/_modals.css
+++ b/frontend/public/styles/_modals.css
@@ -4,3 +4,4 @@
 @import './pages/batch_modal.css';
 @import './pages/reservable_modal.css';
 @import './pages/photo_modal.css';
+@import './pages/generic_modal.css';
