--- a/frontend/public/styles/_pages.css
+++ b/frontend/public/styles/_pages.css
@@ -6,3 +6,5 @@
 @import './pages/collection.css';
 @import './pages/booking.css';
 @import './pages/home.css';
+@import './pages/account_config.css';
+
