--- a/frontend/public/styles/_pages.css
+++ b/frontend/public/styles/_pages.css
@@ -7,4 +7,6 @@
 @import './pages/booking.css';
 @import './pages/home.css';
 @import './pages/account_config.css';
+@import './pages/account_booking_config.css';
+
 
