--- a/frontend/public/styles/pages/inventory.css
+++ b/frontend/public/styles/pages/inventory.css
@@ -23,6 +23,7 @@ input {
   border: 1px solid #ddd;
   border-radius: 5px;
   max-height: 60vh; /* ou 70vh, 90vh selon ton goût */
+  position: relative; /* nécessaire pour overlay */
 }
 
 table {
@@ -126,4 +127,31 @@ tr:nth-child(even) {
 .add-reservable-btn:active {
   transform: scale(0.95);
   background-color: #004a9c;
+}
+
+#table-spinner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.4); /* plus visible */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+}
+.loader {
+  border: 6px solid #f3f3f3;
+  border-top: 6px solid #3399ff;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 1s linear infinite;
+}
+
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
